# DATV-Linux

./: .gitignore  CMakeLists.txt  Desktop_Launcher.txt  LICENSE  README.md  RunOnWindows.txt  UPGRADE_NOTES.md  check_dependencies.py  dvbs2_fec.cpp  dvbs2_gui.py  dvbs2_tx.h  fec_selector.cpp  install.sh  main.cpp  optimization.cpp  pl_header.cpp  requirements.txt
